--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -106,7 +106,9 @@ body {
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); /* Ombre avec un léger flou */
       height: 50px;
       width: 100%;
-
+      @media only screen and (min-width: 1024px) {
+          box-shadow: inset;
+      }
       .fa-location-dot {
         margin-right: 20px;
       }
