--- a/sass/_restaurants.scss
+++ b/sass/_restaurants.scss
@@ -131,7 +131,7 @@
 
         background-color: white;
         border-radius: 15px;
-        box-shadow: 0 4px 15px 0;
+        box-shadow: 0px 4.01px 15.04px 0px rgba(0, 0, 0, 0.1);
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -194,7 +194,9 @@
           rgb(147, 86, 220),
           rgb(255, 121, 218)
         );
-        border-radius: 20px;
+        border-radius: 25px;
+        border:0;
+        box-shadow:0px 4px  10px 0px rgba(0, 0, 0, 0.25) ;
         transition: background-color 0.5s;
         font-size: 16px;
       }
